force-app/main/default/objects/Open_Assignment_Insolvency_Account__c/Open_Assignment_Insolvency_Account__c.object-meta.xml
<CustomObject>
    <description>Open Assignment Insolvency Account</description>
    <label>Open Assignment Insolvency Account</label>
    <nameField>
        <displayFormat>OAIA-{0000}</displayFormat>
        <label>Open Assignment Insolvency Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Assignment Insolvency Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>