force-app/main/default/objects/Open_Assignment_Insolvency_Account__c/fields/Assign_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Name__c</fullName>
    <description>Assign To Name</description>
    <inlineHelpText>Assign To Name</inlineHelpText>
    <label>Assign To Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scotia Bank</fullName>
            </value>
            <value>
                <fullName>SPL</fullName>
            </value>
            <value>
                <fullName>CFG</fullName>
            </value>
            <value>
                <fullName>SDA</fullName>
            </value>
            <value>
                <fullName>Canaccede</fullName>
            </value>
            <value>
                <fullName>Fidem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>