force-app/main/default/objects/Open_Assignment_Insolvency_Account__c/fields/Insolvency_Account__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account__c</fullName>
    <description>Insolvency Account</description>
    <inlineHelpText>Insolvency Account</inlineHelpText>
    <label>Insolvency Account</label>
    <referenceTo>Insolvency_Account__c</referenceTo>
    <relationshipLabel>Open Assignment Insolvency Accounts</relationshipLabel>
    <relationshipName>Open_Assignment_Insolvency_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>