force-app/main/default/objects/Open_Assignment_Insolvency_Account__c/fields/Number_of_Open_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Assignments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Open_Assignments</description>
    <inlineHelpText>Open_Assignments</inlineHelpText>
    <label>Open_Assignments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>